# numio-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: numio.hpp
include/numio/: fp_extra.hpp  native.hpp  std.hpp
test/: CMakeLists.txt  debug.cpp
test/src/: float_tests.cpp  integer_tests.cpp
