cmake_minimum_required(VERSION 3.14)

# ******************************************************************************

# Project declaration.
project(
  numio
  VERSION 1.3.0
  DESCRIPTION "Template classes for flexible and platform-agnostic integer and floating-point data I/O. "
  LANGUAGES CXX
)

# ******************************************************************************

# Header-only (interface) library.
add_library(${PROJECT_NAME} INTERFACE)
# Create an alias so the library can be used internally.
add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})

# C++ standard and requirements.
target_compile_features(${PROJECT_NAME} INTERFACE cxx_std_17)

# Include directories.
target_include_directories(${PROJECT_NAME} INTERFACE
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>
)

# ******************************************************************************

# Installation targets (for find_package()).
include(GNUInstallDirs)

install(TARGETS ${PROJECT_NAME}
  EXPORT ${PROJECT_NAME}Targets
  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

install(DIRECTORY include/
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

install(EXPORT ${PROJECT_NAME}Targets
  FILE ${PROJECT_NAME}Targets.cmake
  NAMESPACE ${PROJECT_NAME}::
  DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
)

# ******************************************************************************

# Testing framework.
if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
  enable_testing()
  add_subdirectory(test)
endif()
